--- a/package.json
+++ b/package.json
@@ -55,13 +55,17 @@
     "patch-package": "^8.0.0",
     "pdfjs-dist": "^5.2.133",
     "react": "^18.3.1",
+    "react-confetti-explosion": "^2.1.2",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-tsparticles": "^2.12.2",
+    "react-typed": "^2.0.12",
     "recharts": "^2.15.1",
     "resend": "^4.5.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^3.8.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
