--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "9.36.0",
+    "eslint-config-next": "15.5.4",
     "genkit-cli": "^1.8.0",
     "null-loader": "^4.0.1",
     "postcss": "^8",
